# probabilistic_conflict_modelling

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  LEARN.md  README.md  changelog.md  pyproject.toml  utilities.py
benchmarks/: bm_cm_bootstrap_expanded_2018.parquet  bm_cm_bootstrap_expanded_2019.parquet  bm_cm_bootstrap_expanded_2020.parquet  bm_cm_bootstrap_expanded_2021.parquet  bm_cm_last_historical_poisson_expanded_2018.parquet  bm_cm_last_historical_poisson_expanded_2019.parquet  bm_cm_last_historical_poisson_expanded_2020.parquet  bm_cm_last_historical_poisson_expanded_2022.parquet  bm_cm_last_historical_poisson_expanded_2024.parquet
data/: country_list.csv  translation_table_cow_gw_name.csv
data_preprocessing_pipeline/: 1. add_date.ipynb  1. add_date.py  2. add_ccode_to_cm_features.R  3. remove_meaningless.R  4. add_region_to_cm.R  5. create_vdem_PCAs.py  5. shift yearly cm_features.ipynb  6. shift yearly cm_features.py
evaluation/: CompetitionEvaluation.py  IgnoranceScore.py  compare_submissions.ipynb  evaluate_submissions.py  metrics_and_latex_tables.ipynb  readme.md
model/: NGBoost Regressor singlehorizon.ipynb  NGBoost Regressor singlehorizon.py  least_important_features.py  run_model.py
scripts/: Vdem multicolinearity.ipynb  cm_features_v1_v2_actuals_diff.ipynb  cm_features_v1_v2_diff.ipynb  convert_parquet_to_csv.ipynb  data_preprocessing_pipeline_execution.sh  jupytext_sync.sh  tsne-outliers.ipynb
services/: DataReadingService.py  DataSplittingService.py  DataTransformationService.py  ModelCachingService.py  ModelEvaluationService.py  (+4 more)
(+109 files in other folders)
