[tool.poetry]
name = "Probablisitic Conflcit Modelling"
version = "0.1.1"
authors = ["Oleksandr Zakotianskyi"]
description = "Probabilistic Conflict Modelling project"
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
nbsphinx = "^0.9.2"
furo = "^2023.7.26"
myst-parser = "^2.0.0"
sphinx-inline-tabs = "^2023.4.21"
sphinx-copybutton = "^0.5.2"
numpy = "^1.24"
pandas = "^2.1.0"
ipykernel = "^6.25.2"
sphinx = "^7.2.6"
ipython = "^8.15.0"
ipywidgets = "^8.1.1"
numba = "^0.57.1"
xskillscore = "^0.0.24"
pathlib = "^1.0.1"
pyyaml = "^6.0.1"
pyarrow = "^13.0.0"
openpyxl = "^3.1.2"
seaborn = { extras = ["stats"], version = "^0.13.0" }
jupyter = "^1.0.0"
xgboost = "^2.0.3"
plotly = "^5.20.0"
torch = "^2.2.1"
shap = "^0.45.0"
ngboost = "^0.5.1"
crps = "^2.0.4"
pre-commit = "^3.8.0"
black = "^24.8.0"
jupytext = "^1.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
